# Hylium

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  ROADMAP.md  SECURITY.md  devnet_2nodes.sh  libhyliumkernel.pc.in  run_ft.sh  run_p2p.sh  run_smoke.sh  vcpkg.json
.claude/: Hylium.md
.claude/agents/: hylium-crypto-developer.md
.github/: PULL_REQUEST_TEMPLATE.md  ci-lint-exec.py  ci-test-each-commit-exec.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml  security.yml
.github/workflows/: ci.yml
.tx/: config
backend/: package-lock.json  package.json
backend/prisma/: dev.db  schema.prisma
backend/src/: index.ts
ci/: lint_imagefile  test_imagefile  test_run_all.sh
ci/lint/: 01_install.sh  06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_cross_intel.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_alpine_musl.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet.sh  00_setup_env_native_previous_releases.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  00_setup_env_win64_msvcrt.sh  01_base_install.sh  02_run_container.py  02_run_container.sh  03_test_script.sh  GetCMakeLogFiles.cmake  wrap-valgrind.sh
cmake/: ccache.cmake  crc32c.cmake  hylium-build-config.h.in  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  windows-app.manifest.in
cmake/module/: AddBoostIfNeeded.cmake  AddWindowsResources.cmake  CheckLinkerSupportsPIE.cmake  CheckSourceCompilesWithFlags.cmake  FindLibevent.cmake  FindQRencode.cmake  FindQt.cmake  FindUSDT.cmake  FindZeroMQ.cmake  FlagsSummary.cmake  GenerateSetupNsi.cmake  GetTargetInterface.cmake  InstallBinaryComponent.cmake  Maintenance.cmake  ProcessConfigurations.cmake  TargetDataSources.cmake  TestAppendRequiredLibraries.cmake  TryAppendCXXFlags.cmake  TryAppendLinkerFlag.cmake  WarnAboutGlobalProperties.cmake
cmake/script/: Coverage.cmake  CoverageFuzz.cmake  CoverageInclude.cmake.in  GenerateBuildInfo.cmake  GenerateHeaderFromJson.cmake  GenerateHeaderFromRaw.cmake  cov_tool_wrapper.sh.in  macos_zip.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
contrib/asmap/: README.md  asmap-tool.py
contrib/debian/: copyright
contrib/devtools/: README.md  check-deps.sh  circular-dependencies.py  copyright_header.py  gen-hylium-conf.sh  gen-manpages.py  genesis_hylium.cpp  headerssync-params.py  utils.py
contrib/devtools/hylium-tidy/: CMakeLists.txt  README.md  hylium-tidy.cpp  nontrivial-threadlocal.cpp  nontrivial-threadlocal.h
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-clean  guix-codesign  guix-verify  manifest.scm  security-check.py  symbol-check.py
contrib/init/: README.md  hyliumd.conf  hyliumd.init  hyliumd.openrc  hyliumd.openrcconf  hyliumd.service  org.hylium.hyliumd.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-create.sh  macdeployqtplus
contrib/message-capture/: message-capture-docs.md  message-capture-parser.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt
contrib/signet/: README.md  getcoins.py  miner
contrib/testgen/: README.md  gen_key_io_test_vectors.py  update_bech32_hrp.py  update_bip324_test_vectors.py  update_bip32_test_vectors.py
contrib/tracing/: README.md  (+8 more)
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  RELEASE_GUIDE.md  REST-interface.md  WHITEPAPER.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  consensus.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  genesis-values.md  guix.md  hylium-conf.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  p2p-security.md  (+16 more)
scripts/: mine_genesis.sh
share/: setup.nsi.in
src/: .clang-format  .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  cluster_linearize.h  coins.cpp  coins.h  compressor.cpp  compressor.h  (+123 more)
src/kernel/: CMakeLists.txt  blockmanager_opts.h  caches.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  hyliumkernel.cpp  hyliumkernel.h  hyliumkernel_wrapper.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  warning.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
test/: CMakeLists.txt  README.md  config.ini  config.ini.in  get_previous_releases.py
website/: index.html  package-lock.json  package.json  tailwind.config.js
(+1691 files in other folders)
